--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/node": "^14.6.4",
     "@types/react": "^16.9.49",
     "bcrypt": "^5.0.0",
+    "griddle-react": "^1.13.1",
     "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.2",
     "next": "^9.3.2",
     "react": "^16.12.0",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^16.12.0",
     "swr": "^0.1.16",
     "typescript": "^4.0.2",
