--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx", "pages/index.jsx"
+    "**/*.tsx", "pages/index.tsx"
   ],
   "exclude": [
     "node_modules"
