--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "build": "next build",
     "start": "next start",
     "format": "npx prettier --write pages/",
-    "lint": "npx eslint pages/*tsx pages/components/*/*tsx --fix"
-},
+    "lint": "npx eslint pages/*tsx pages/components/*/*tsx --fix",
+    "test": "jest"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@types/node": "^14.6.4",
     "@types/react": "^16.9.49",
     "bcrypt": "^5.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
     "griddle-react": "^1.13.1",
     "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^2.2.1",
@@ -26,7 +29,9 @@
     "react": "^16.12.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^16.12.0",
+    "react-test-renderer": "^16.13.1",
     "swr": "^0.1.16",
+    "ts-jest": "^26.3.0",
     "typescript": "^4.0.2",
     "unfetch": "^4.1.0",
     "uuid": "^3.4.0"
@@ -41,6 +46,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "jest": "^26.4.2",
     "prettier": "2.1.1"
   }
 }
