--- a/package.json
+++ b/package.json
@@ -1,52 +1,79 @@
 {
-  "name": "Nextjs-simple-login",
+  "name": "artemis-web",
   "version": "1.0.0",
-  "description": "next.js login api and app boilerplate",
-  "main": "index.js",
-  "author": "Martin Granados Garcia",
   "license": "MIT",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "format": "npx prettier --write pages/",
-    "lint": "npx eslint pages/*tsx pages/components/*/*tsx --fix",
-    "test": "jest"
+    "nx": "nx",
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test",
+    "lint": "nx workspace-lint && nx lint",
+    "e2e": "nx e2e",
+    "affected:apps": "nx affected:apps",
+    "affected:libs": "nx affected:libs",
+    "affected:build": "nx affected:build",
+    "affected:e2e": "nx affected:e2e",
+    "affected:test": "nx affected:test",
+    "affected:lint": "nx affected:lint",
+    "affected:dep-graph": "nx affected:dep-graph",
+    "affected": "nx affected",
+    "format": "nx format:write",
+    "format:write": "nx format:write",
+    "format:check": "nx format:check",
+    "update": "nx migrate latest",
+    "workspace-schematic": "nx workspace-schematic",
+    "dep-graph": "nx dep-graph",
+    "help": "nx help"
   },
+  "private": true,
   "dependencies": {
+    "document-register-element": "1.13.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "next": "9.5.2",
     "@material-ui/core": "^4.11.0",
-    "@types/node": "^14.6.4",
-    "@types/react": "^16.9.49",
-    "bcrypt": "^5.0.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "griddle-react": "^1.13.1",
-    "isomorphic-unfetch": "^3.0.0",
+    "react-bootstrap-table-next": "^4.0.3",
     "js-cookie": "^2.2.1",
+    "swr": "^0.1.16",
+    "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.2",
-    "next": "^9.3.2",
-    "react": "^16.12.0",
-    "react-bootstrap-table-next": "^4.0.3",
-    "react-dom": "^16.12.0",
-    "react-test-renderer": "^16.13.1",
-    "swr": "^0.1.16",
-    "ts-jest": "^26.3.0",
-    "typescript": "^4.0.2",
-    "unfetch": "^4.1.0",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
-    "eslint": "^7.9.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.2",
-    "jest": "^26.4.2",
-    "prettier": "2.1.1"
+    "@nrwl/workspace": "10.2.0",
+    "@types/node": "~8.9.4",
+    "dotenv": "6.2.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.0.0",
+    "eslint": "6.8.0",
+    "typescript": "~3.9.3",
+    "prettier": "2.0.4",
+    "@nrwl/next": "10.2.0",
+    "@nrwl/jest": "10.2.0",
+    "jest": "26.2.2",
+    "@types/jest": "26.0.8",
+    "ts-jest": "26.1.4",
+    "cypress": "^4.1.0",
+    "@nrwl/cypress": "10.2.0",
+    "@nrwl/web": "10.2.0",
+    "@nrwl/react": "10.2.0",
+    "@types/react": "16.9.38",
+    "@types/react-dom": "16.9.8",
+    "@testing-library/react": "10.4.1",
+    "@nrwl/eslint-plugin-nx": "10.2.0",
+    "@typescript-eslint/parser": "2.19.2",
+    "@typescript-eslint/eslint-plugin": "2.19.2",
+    "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-import": "2.21.2",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "4.0.4",
+    "eslint-plugin-cypress": "^2.10.3",
+    "@babel/core": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-typescript": "7.9.0",
+    "@babel/preset-react": "7.9.4",
+    "babel-jest": "26.2.2"
   }
 }
