--- a/package.json
+++ b/package.json
@@ -33,12 +33,16 @@
     "next": "9.5.2",
     "@material-ui/core": "^4.11.0",
     "react-bootstrap-table-next": "^4.0.3",
+    "@types/react-bootstrap-table-next": "^4.0.3",
     "js-cookie": "^2.2.1",
     "swr": "^0.1.16",
     "isomorphic-unfetch": "^3.0.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^8.5.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "mongodb": "^3.5.2",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "@types/uuid": "^3.4.0",
+    "bcrypt": "^5.0.0"
   },
   "devDependencies": {
     "@nrwl/workspace": "10.2.0",
