--- a/apps/artemis-web/.eslintrc
+++ b/apps/artemis-web/.eslintrc
@@ -210,6 +210,7 @@
     "@typescript-eslint/no-array-constructor": "warn",
     "@typescript-eslint/no-namespace": "error",
     "no-use-before-define": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-use-before-define": [
       "warn",
       {
