--- a/package.json
+++ b/package.json
@@ -27,22 +27,22 @@
   },
   "private": true,
   "dependencies": {
-    "document-register-element": "1.13.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "next": "9.5.2",
     "@material-ui/core": "^4.11.0",
-    "react-bootstrap-table-next": "^4.0.3",
-    "@types/react-bootstrap-table-next": "^4.0.3",
-    "js-cookie": "^2.2.1",
-    "swr": "^0.1.16",
-    "isomorphic-unfetch": "^3.0.0",
-    "jsonwebtoken": "^8.5.0",
     "@types/jsonwebtoken": "^8.5.0",
-    "mongodb": "^3.5.2",
-    "uuid": "^3.4.0",
+    "@types/react-bootstrap-table-next": "^4.0.3",
     "@types/uuid": "^3.4.0",
-    "bcrypt": "^5.0.0"
+    "bcrypt": "^5.0.0",
+    "document-register-element": "1.13.1",
+    "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.0",
+    "mongodb": "^3.5.2",
+    "next": "9.5.2",
+    "react": "16.13.1",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-dom": "16.13.1",
+    "swr": "^0.1.16",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
@@ -75,11 +75,18 @@
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4.0.4",
+    "husky": "^4.3.0",
     "jest": "26.2.2",
     "prettier": "2.0.4",
     "ts-jest": "26.1.4",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
     "typescript": "~3.9.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run nx format",
+      "pre-push": "npm run nx lint"
+    }
   }
 }
