--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^8.5.0",
     "mongodb": "^3.5.2",
     "next": "9.5.2",
+    "next-auth": "^3.1.0",
     "react": "16.13.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "16.13.1",
