GitHub authentication added (alpha state - buggy)

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 MONGODB_USER=admin
 MONGODB_PASS=pass
+NEXTAUTH_URL=http://localhost:4200/
+GITHUB_ID=a123ca4dc1dc30e3390c
+GITHUB_SECRET=6adfe4e946494326efc737bac37b9fbb99e4e11c
+DATABASE_URL=mongodb://admin:pass@localhost:27017
