--- a/package.json
+++ b/package.json
@@ -86,8 +86,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run nx format",
-      "pre-push": "npm run nx lint"
+      "pre-commit": "yarn run format",
+      "pre-push": "yarn run lint"
     }
   }
 }
