--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
   },
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.2.1",
     "@material-ui/core": "^4.11.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/react-bootstrap-table-next": "^4.0.3",
     "@types/uuid": "^3.4.0",
     "bcrypt": "^5.0.0",
     "document-register-element": "1.13.1",
+    "graphql": "^15.3.0",
     "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.0",
