--- a/.env
+++ b/.env
@@ -3,7 +3,10 @@ MONGODB_PASS=pass
 NEXTAUTH_URL=http://localhost:4200/
 GITHUB_ID=a123ca4dc1dc30e3390c
 GITHUB_SECRET=6adfe4e946494326efc737bac37b9fbb99e4e11c
-DATABASE_URL=mongodb://admin:pass@localhost:27017/artemis-web?synchronize=true
 
 GRAPHQL_URI=http://localhost:9999/v1/graphql
 HASURA_SECRET=@rt3m1s.
+
+JWT_SECRET=supersecret
+MONGODB_URI=mongodb://admin:pass@localhost:27017
+DB_NAME=artemis-web
