--- a/package.json
+++ b/package.json
@@ -28,22 +28,28 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.2.1",
+    "@hapi/iron": "^6.0.0",
     "@material-ui/core": "^4.11.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/react-bootstrap-table-next": "^4.0.3",
     "@types/uuid": "^3.4.0",
     "bcrypt": "^5.0.0",
+    "connect-roles": "^3.1.2",
     "graphql": "^15.3.0",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.0",
     "mongodb": "^3.5.2",
     "next": "9.5.2",
     "next-auth": "^3.1.0",
+    "next-connect": "^0.9.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react": "16.13.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "16.13.1",
     "swr": "^0.1.16",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
