--- a/package.json
+++ b/package.json
@@ -34,16 +34,20 @@
     "@types/react-bootstrap-table-next": "^4.0.3",
     "@types/uuid": "^3.4.0",
     "bcrypt": "^5.0.0",
+    "connect-mongo": "^3.2.0",
     "connect-roles": "^3.1.2",
     "graphql": "^15.3.0",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.0",
     "mongodb": "^3.5.2",
+    "nanoid": "^3.1.12",
     "next": "9.5.2",
     "next-auth": "^3.1.0",
     "next-connect": "^0.9.0",
+    "next-session": "^3.3.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "passport-remember-me": "0.0.1",
     "react": "16.13.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "16.13.1",
