graphql server-client communication

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ GITHUB_SECRET=6adfe4e946494326efc737bac37b9fbb99e4e11c
 DATABASE_URL=mongodb://admin:pass@localhost:27017/artemis-web?synchronize=true
 DB_NAME=artemis-web
 MONGODB_URI=mongodb://admin:pass@localhost:27017
+GRAPHQL_URI=http://localhost:9999/v1/graphql
+HASURA_SECRET=@rt3m1s.
