React graphql hooks added

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/react-bootstrap-table-next": "^4.0.3",
     "@types/uuid": "^3.4.0",
+    "apollo-boost": "^0.4.9",
     "bcrypt": "^5.0.0",
     "connect-mongo": "^3.2.0",
     "connect-roles": "^3.1.2",
@@ -42,6 +43,7 @@
     "mongodb": "^3.5.2",
     "nanoid": "^3.1.12",
     "next": "9.5.2",
+    "next-apollo": "^5.0.0",
     "next-auth": "^3.1.0",
     "next-connect": "^0.9.0",
     "next-session": "^3.3.2",
@@ -49,6 +51,7 @@
     "passport-local": "^1.0.0",
     "passport-remember-me": "0.0.1",
     "react": "16.13.1",
+    "react-apollo": "^3.1.5",
     "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "16.13.1",
     "swr": "^0.1.16",
