--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-bootstrap-table-next": "^4.0.3",
     "@types/uuid": "^3.4.0",
     "apollo-boost": "^0.4.9",
+    "apollo-link-ws": "^1.0.20",
     "bcrypt": "^5.0.0",
     "connect-mongo": "^3.2.0",
     "connect-roles": "^3.1.2",
@@ -54,6 +55,7 @@
     "react-apollo": "^3.1.5",
     "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "16.13.1",
+    "subscriptions-transport-ws": "^0.9.18",
     "swr": "^0.1.16",
     "uuid": "^3.4.0",
     "validator": "^13.1.17"
