--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "bcrypt": "^5.0.0",
     "connect-mongo": "^3.2.0",
     "connect-roles": "^3.1.2",
+    "cookie-cutter": "^0.2.0",
     "graphql": "^15.3.0",
     "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.0",
     "mongodb": "^3.5.2",
     "nanoid": "^3.1.12",
@@ -47,6 +49,7 @@
     "next-apollo": "^5.0.0",
     "next-auth": "^3.1.0",
     "next-connect": "^0.9.0",
+    "next-cookie": "^2.4.2",
     "next-session": "^3.3.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
