--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "apollo-boost": "^0.4.9",
     "apollo-link-ws": "^1.0.20",
     "bcrypt": "^5.0.0",
+    "chance": "^1.1.7",
     "connect-mongo": "^3.2.0",
     "connect-roles": "^3.1.2",
     "cookie-cutter": "^0.2.0",
