--- a/package.json
+++ b/package.json
@@ -33,24 +33,32 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/react-bootstrap-table-next": "^4.0.3",
     "@types/uuid": "^3.4.0",
+    "apollo-boost": "^0.4.9",
+    "apollo-link-ws": "^1.0.20",
     "bcrypt": "^5.0.0",
     "connect-mongo": "^3.2.0",
     "connect-roles": "^3.1.2",
+    "cookie-cutter": "^0.2.0",
     "graphql": "^15.3.0",
     "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.0",
     "mongodb": "^3.5.2",
     "nanoid": "^3.1.12",
     "next": "9.5.2",
+    "next-apollo": "^5.0.0",
     "next-auth": "^3.1.0",
     "next-connect": "^0.9.0",
+    "next-cookie": "^2.4.2",
     "next-session": "^3.3.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-remember-me": "0.0.1",
     "react": "16.13.1",
+    "react-apollo": "^3.1.5",
     "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "16.13.1",
+    "subscriptions-transport-ws": "^0.9.18",
     "swr": "^0.1.16",
     "uuid": "^3.4.0",
     "validator": "^13.1.17"
