--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "./pre-commit.sh",
+      "pre-commit": "yarn run format",
       "pre-push": "yarn run lint"
     }
   }
