--- a/.github/workflows/yarn-ci.yml
+++ b/.github/workflows/yarn-ci.yml
@@ -1,10 +1,15 @@
 name: Node.js CI
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   node-tests:
-
     runs-on: ubuntu-latest
 
     steps:
