ci: add upload of artifacts
Signed-off-by: slowr <3428023+slowr@users.noreply.github.com>

--- a/.github/workflows/cypress-ci.yml
+++ b/.github/workflows/cypress-ci.yml
@@ -30,3 +30,10 @@ jobs:
       env:
         MONGODB_HOST: mongodb
         MONGODB_PORT: ${{ job.services.mongodb.ports[27017] }}
+    - name: 'Upload Artifact'
+      if: failure()
+      uses: actions/upload-artifact@v2
+      with:
+        name: cypress
+        path: dist/cypress
+        retention-days: 5
