--- a/.github/workflows/cypress-ci.yml
+++ b/.github/workflows/cypress-ci.yml
@@ -22,6 +22,9 @@ jobs:
         image: mongo
         ports:
         - 27017:27017
+        env:
+          MONGO_INITDB_ROOT_USERNAME: admin
+          MONGO_INITDB_ROOT_PASSWORD: pass
 
     steps:
     - uses: actions/checkout@v1
