--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,7 @@ tasks:
   - command: |
       mkdir -p /workspace/data && mongod --dbpath /workspace/data &
       if [ -f .env ]; then export $(cat .env | sed 's/#.*//g' | xargs); fi
-      mongo --eval "db.createUser({user:"$MONGODB_USER",pwd:"$MONGODB_PASS",roles:[{role:'root',db:'admin'}]})"
+      mongo admin --eval "db.createUser({user:'"$MONGODB_USER"',pwd:'"$MONGODB_PASS"',roles:[{role:'root',db:'admin'}]})"
       killall mongod
       mongod --auth --dbpath /workspace/data
 ports:
