--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,9 +4,11 @@ tasks:
     command: yarn run start
   - command: |
       mkdir -p /workspace/data && mongod --dbpath /workspace/data &
+      sleep 5
       if [ -f .env ]; then export $(cat .env | sed 's/#.*//g' | xargs); fi
       mongo admin --eval "db.createUser({user:'"$MONGODB_USER"',pwd:'"$MONGODB_PASS"',roles:[{role:'root',db:'admin'}]})"
       killall mongod
+      sleep 5
       mongod --auth --dbpath /workspace/data
 ports:
   - port: 4200
