--- a/package.json
+++ b/package.json
@@ -105,8 +105,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn run format",
-      "pre-push": "yarn run lint"
+      "pre-commit": "yarn run format && yarn run lint",
+      "pre-push": "yarn run affected:test"
     }
   }
 }
