--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@material-ui/core": "^4.11.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/react-bootstrap-table-next": "^4.0.3",
-    "bcrypt": "^5.0.0",
+    "argon2": "^0.27.0",
     "chance": "^1.1.7",
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.0",
