--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nanoid": "^3.1.12",
     "next": "9.5.2",
     "next-connect": "^0.9.0",
+    "next-cookie": "^2.5.0",
     "next-session": "^3.3.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
