--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,7 @@
 image: gitpod/workspace-mongodb
 tasks:
   - init: yarn install --frozen-lockfile
-    command: yarn run start:debug
+    command: yarn run start
   - command: |
       mkdir -p /workspace/data && mongod --dbpath /workspace/data &
       sleep 5
