--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "jsonwebtoken": "^8.5.0",
     "mongodb": "^3.5.2",
     "nanoid": "^3.1.12",
-    "next": "9.5.2",
+    "next": "^10.0.0",
     "next-connect": "^0.9.0",
     "next-cookie": "^2.5.0",
     "next-session": "^3.3.2",
