--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
     "jsonwebtoken": "^8.5.0",
     "mongodb": "^3.5.2",
     "nanoid": "^3.1.12",
-    "next": "9.5.2",
+    "next": "^10.0.0",
     "next-connect": "^0.9.0",
+    "next-cookie": "^2.5.0",
     "next-session": "^3.3.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -49,6 +50,7 @@
     "react-dom": "16.13.1",
     "subscriptions-transport-ws": "^0.9.18",
     "swr": "^0.1.16",
+    "tslib": "^2.0.3",
     "validator": "^13.1.17"
   },
   "devDependencies": {
@@ -84,6 +86,8 @@
     "eslint-plugin-react-hooks": "4.0.4",
     "husky": "^4.3.0",
     "jest": "26.2.2",
+    "jest-fetch-mock": "^3.0.3",
+    "msw": "^0.21.3",
     "prettier": "2.0.4",
     "ts-jest": "26.1.4",
     "ts-node": "~7.0.0",
