--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,10 @@ services:
       - "27017:27017"
     volumes:
       - ./mongo-data:/data/db
+  web:
+    image: mongo:latest
+    depends_on:
+      - mongodb
+    volumes:
+      - ./scripts:/scripts
+    command: /scripts/wait.sh
