refactor: delete unnecessary files and hardcoded strings

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ MONGODB_PASS=pass
 MONGODB_HOST=localhost
 MONGODB_PORT=27017
 MONGODB_NAME=artemis-web
+MONGO_URI=mongodb://admin:pass@mongodb:27017
 
 HASURA_SECRET=@rt3m1s.
 GRAPHQL_HOST=localhost
