--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,6 +2,7 @@ image: gitpod/workspace-mongodb
 tasks:
   - init: yarn install --frozen-lockfile
     command: |
+      export $(cat .env | xargs)
       ./apps/artemis-web/scripts/wait-for -h localhost -p ${MONGODB_PORT} -t 0
       MONGODB_HOST=localhost node apps/artemis-web/scripts/query.js
       MONGODB_HOST=localhost yarn run start
