--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 services:
   mongodb:
     image: mongo:latest
@@ -10,6 +10,18 @@ services:
     env_file:
       - .env
     ports:
-      - "27017:27017"
+      - '27017:27017'
     volumes:
       - ./mongo-data:/data/db
+  app:
+    container_name: artemis-web
+    restart: always
+    build:
+        context: .
+        dockerfile: apps/artemis-web/Dockerfile
+    env_file:
+      - .env
+    ports:
+      - 4200:4200
+    depends_on:
+      - mongodb
