--- a/.env
+++ b/.env
@@ -14,3 +14,16 @@ GRAPHQL_WS_URI=ws://localhost:9999/v1/graphql
 
 DEFAULT_EMAIL=admin@admin.com
 DEFAULT_PASS=admin1234
+
+# LDAP configuration
+SECURITY_LDAP_URI="ldap"
+SECURITY_LDAP_BASE_DN ="ou=people,dc=planetexpress,dc=com"
+SECURITY_LDAP_SEARCH_FILTER="(uid=admin)"
+SECURITY_LDAP_BIND_DN="cn=admin,dc=planetexpress,dc=com"
+SECURITY_LDAP_BIND_PASSWORD="GoodNewsEveryone"
+SECURITY_LDAP_EMAIL_FIELDNAME="mail"
+
+SECURITY_LDAP_ADMIN_GROUPS_FIELDNAME="objectClass"
+SECURITY_LDAP_ADMIN_GROUPS=["top"]
+
+SECURITY_USER_IDENTITY_ATTRIBUTES=['email', 'username']
