feat: ldap fix (need to fix verify)

--- a/.env
+++ b/.env
@@ -16,14 +16,12 @@ DEFAULT_EMAIL=admin@admin.com
 DEFAULT_PASS=admin1234
 
 # LDAP configuration
-SECURITY_LDAP_URI="ldap"
-SECURITY_LDAP_BASE_DN ="ou=people,dc=planetexpress,dc=com"
-SECURITY_LDAP_SEARCH_FILTER="(uid=admin)"
-SECURITY_LDAP_BIND_DN="cn=admin,dc=planetexpress,dc=com"
-SECURITY_LDAP_BIND_PASSWORD="GoodNewsEveryone"
-SECURITY_LDAP_EMAIL_FIELDNAME="mail"
-
-SECURITY_LDAP_ADMIN_GROUPS_FIELDNAME="objectClass"
-SECURITY_LDAP_ADMIN_GROUPS=["top"]
-
-SECURITY_USER_IDENTITY_ATTRIBUTES=['email', 'username']
+#SECURITY_LDAP_URI="ldap"
+#SECURITY_LDAP_BASE_DN ="ou=people,dc=planetexpress,dc=com"
+#SECURITY_LDAP_SEARCH_FILTER="(uid=admin)"
+#SECURITY_LDAP_BIND_DN="cn=admin,dc=planetexpress,dc=com"
+#SECURITY_LDAP_BIND_PASSWORD="GoodNewsEveryone"
+#SECURITY_LDAP_EMAIL_FIELDNAME="mail"
+#SECURITY_LDAP_ADMIN_GROUPS_FIELDNAME="objectClass"
+#SECURITY_LDAP_ADMIN_GROUPS=["top"]
+#SECURITY_USER_IDENTITY_ATTRIBUTES=['email', 'username']
