--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-cookie": "^2.5.0",
     "next-session": "^3.3.2",
     "passport": "^0.4.1",
+    "passport-ldapauth": "^3.0.1",
     "passport-local": "^1.0.0",
     "passport-remember-me": "0.0.1",
     "react": "16.13.1",
@@ -69,6 +70,7 @@
     "@testing-library/react": "10.4.1",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
+    "@types/passport": "^1.0.4",
     "@types/react": "16.9.38",
     "@types/react-dom": "16.9.8",
     "@typescript-eslint/eslint-plugin": "2.19.2",
