feat: added the button to work with same onClick

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,7 @@
       "type": "node",
       "request": "attach",
       "name": "Attach Debugger",
-      "skipFiles": [
-        "node_modules/**"
-      ],
+      "skipFiles": ["node_modules/**"],
       "port": 9229
     }
   ]
