--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "chance": "^1.1.7",
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.0",
+    "ldapjs": "^2.2.2",
     "mongodb": "^3.5.2",
     "nanoid": "^3.1.12",
     "next": "^10.0.0",
+    "next-auth": "^3.1.0",
     "next-connect": "^0.9.0",
     "next-cookie": "^2.5.0",
     "next-session": "^3.3.2",
@@ -53,6 +55,9 @@
     "swr": "^0.1.16",
     "tslib": "^2.0.3",
     "validator": "^13.1.17"
+  },
+  "peerOptionalDependencies": {
+    "mongodb": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
