--- a/.env
+++ b/.env
@@ -13,15 +13,13 @@ DEFAULT_EMAIL=admin@admin.com
 DEFAULT_PASS=admin1234
 
 # LDAP configuration
+LDAP_ENABLED=true
 LDAP_HOST=ldap
 LDAP_PORT=389
 LDAP_PROTOCOL=ldap
 LDAP_BIND_DN="cn=admin,dc=planetexpress,dc=com"
 LDAP_BIND_SECRET="GoodNewsEveryone"
 LDAP_SEARCH_BASE ="ou=people,dc=planetexpress,dc=com"
-LDAP_SEARCH_FILTER="(uid={{username}})"
-LDAP_SEARCH_ATTRIBUTES="mail, uid, employeeType"
+LDAP_SEARCH_FILTER="(mail={{username}})"
+LDAP_SEARCH_ATTRIBUTES="mail, uid"
 LDAP_EMAIL_FIELDNAME=mail
-
-# LDAP_ADMIN_GROUPS_FIELDNAME="objectClass"
-# LDAP_ADMIN_GROUPS=["top"]
