--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@apollo/client": "^3.2.1",
     "@material-ui/core": "^4.11.0",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.5.34",
     "@types/react-bootstrap-table-next": "^4.0.3",
     "argon2": "^0.27.0",
     "chance": "^1.1.7",
