--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "passport-remember-me": "0.0.1",
     "react": "16.13.1",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "16.13.1",
     "react-toastify": "^6.1.0",
     "subscriptions-transport-ws": "^0.9.18",
