--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@apollo/client": "^3.2.1",
     "@material-ui/core": "^4.11.0",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.5.34",
     "@types/react-bootstrap-table-next": "^4.0.3",
     "argon2": "^0.27.0",
     "chance": "^1.1.7",
@@ -43,6 +44,7 @@
     "next-cookie": "^2.5.0",
     "next-session": "^3.3.2",
     "passport": "^0.4.1",
+    "passport-ldapauth": "^3.0.1",
     "passport-local": "^1.0.0",
     "passport-remember-me": "0.0.1",
     "react": "16.13.1",
@@ -69,6 +71,7 @@
     "@testing-library/react": "10.4.1",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
+    "@types/passport": "^1.0.4",
     "@types/react": "16.9.38",
     "@types/react-dom": "16.9.8",
     "@typescript-eslint/eslint-plugin": "2.19.2",
