fix: graphql subscription

--- a/apps/artemis-web/Dockerfile
+++ b/apps/artemis-web/Dockerfile
@@ -2,12 +2,14 @@ FROM node:12.19.0-alpine
 
 WORKDIR /app
 
+COPY package.json yarn.lock ./
+RUN yarn install --frozen-lockfile
+
+RUN apk add --no-cache bash
+
 COPY . .
 COPY ./apps/artemis-web/scripts/* ./
 
-RUN yarn install --frozen-lockfile && \
-    yarn run nx build artemis-web --prod
-
-RUN apk add --no-cache bash
+RUN yarn run nx build artemis-web --prod
 
 ENTRYPOINT ["./entrypoint"]
