fix: return to prod values

--- a/.env
+++ b/.env
@@ -7,13 +7,13 @@ DEFAULT_PASS=admin1234
 # MongoDB configuration
 MONGODB_USER=admin
 MONGODB_PASS=pass
-MONGODB_HOST=localhost
+MONGODB_HOST=mongodb
 MONGODB_PORT=27017
 MONGODB_NAME=artemis-web
 
 # LDAP configuration
 LDAP_ENABLED=true
-LDAP_HOST=localhost
+LDAP_HOST=ldap
 LDAP_PORT=389
 LDAP_PROTOCOL=ldap
 LDAP_BIND_DN="cn=admin,dc=planetexpress,dc=com"
