--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "16.13.1",
     "react-toastify": "^6.1.0",
     "subscriptions-transport-ws": "^0.9.18",
