--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "16.13.1",
     "react-mutation-observer": "^1.1.0",
     "react-toastify": "^6.1.0",
