--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-bootstrap-table-next": "^4.0.3",
     "argon2": "^0.27.0",
     "chance": "^1.1.7",
+    "draft-js": "^0.11.7",
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.0",
     "mongodb": "^3.5.2",
@@ -49,8 +50,6 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
-    "react-bootstrap-table2-toolkit": "^2.1.3",
-    "react-codemirror2": "^7.2.1",
     "react-dom": "16.13.1",
     "react-toastify": "^6.1.0",
     "subscriptions-transport-ws": "^0.9.18",
