--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "16.13.1",
+    "react-mutation-observer": "^1.1.0",
     "react-toastify": "^6.1.0",
     "subscriptions-transport-ws": "^0.9.18",
     "swr": "^0.1.16",
