--- a/package.json
+++ b/package.json
@@ -52,9 +52,12 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-burger-menu": "^2.9.2",
     "react-dom": "16.13.1",
     "react-mutation-observer": "^1.1.0",
     "react-toastify": "^6.1.0",
+    "react-toolkit": "^2.0.0-alpha.3",
+    "react-tooltip": "^4.2.11",
     "subscriptions-transport-ws": "^0.9.18",
     "swr": "^0.1.16",
     "tslib": "^2.0.3",
