feat: config_comparison + system pages added

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@types/react-bootstrap-table-next": "^4.0.3",
     "argon2": "^0.27.0",
     "chance": "^1.1.7",
+    "codemirror": "^5.58.3",
+    "diff_match_patch": "^0.1.1",
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.0",
     "mongodb": "^3.5.2",
@@ -49,6 +51,7 @@
     "passport-remember-me": "0.0.1",
     "react": "16.13.1",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "16.13.1",
     "react-toastify": "^6.1.0",
     "subscriptions-transport-ws": "^0.9.18",
