--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-burger-menu": "^2.9.2",
     "react-dom": "16.13.1",
     "react-mutation-observer": "^1.1.0",
