--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-burger-menu": "^2.9.2",
     "react-dom": "16.13.1",
     "react-mutation-observer": "^1.1.0",
+    "react-spring": "^8.0.27",
     "react-toastify": "^6.1.0",
     "react-toolkit": "^2.0.0-alpha.3",
     "react-tooltip": "^4.2.11",
