--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@types/react-bootstrap-table-next": "^4.0.3",
     "argon2": "^0.27.0",
     "chance": "^1.1.7",
+    "codemirror": "^5.58.3",
+    "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.0",
@@ -42,7 +44,6 @@
     "nanoid": "^3.1.12",
     "next": "^10.0.0",
     "next-connect": "^0.9.0",
-    "next-cookie": "^2.5.0",
     "next-session": "^3.3.2",
     "passport": "^0.4.1",
     "passport-ldapauth": "^3.0.1",
@@ -53,9 +54,8 @@
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
-    "react-burger-menu": "^2.9.2",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "16.13.1",
-    "react-mutation-observer": "^1.1.0",
     "react-spring": "^8.0.27",
     "react-toastify": "^6.1.0",
     "react-toolkit": "^2.0.0-alpha.3",
