--- a/package.json
+++ b/package.json
@@ -35,13 +35,15 @@
     "@types/react-bootstrap-table-next": "^4.0.3",
     "argon2": "^0.27.0",
     "chance": "^1.1.7",
+    "codemirror": "^5.58.3",
+    "diff_match_patch": "^0.1.1",
+    "draft-js": "^0.11.7",
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.0",
     "mongodb": "^3.5.2",
     "nanoid": "^3.1.12",
     "next": "^10.0.0",
     "next-connect": "^0.9.0",
-    "next-cookie": "^2.5.0",
     "next-session": "^3.3.2",
     "passport": "^0.4.1",
     "passport-ldapauth": "^3.0.1",
@@ -49,8 +51,15 @@
     "passport-remember-me": "0.0.1",
     "react": "16.13.1",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "16.13.1",
+    "react-spring": "^8.0.27",
     "react-toastify": "^6.1.0",
+    "react-toolkit": "^2.0.0-alpha.3",
+    "react-tooltip": "^4.2.11",
     "subscriptions-transport-ws": "^0.9.18",
     "swr": "^0.1.16",
     "tslib": "^2.0.3",
