--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.2.1",
+    "@apollo/react-testing": "^4.0.0",
     "@material-ui/core": "^4.11.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.34",
