feat: edit config/comments + load as sets

--- a/.env
+++ b/.env
@@ -22,3 +22,7 @@ LDAP_SEARCH_BASE="ou=people,dc=planetexpress,dc=com"
 LDAP_SEARCH_FILTER="(mail={{username}})"
 LDAP_SEARCH_ATTRIBUTES="mail, uid"
 LDAP_EMAIL_FIELDNAME=mail
+
+# API HOSTS
+CONFIG_HOST=configuration
+CONFIG_PORT=3000
