--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "argon2": "^0.27.0",
     "chance": "^1.1.7",
     "codemirror": "^5.58.3",
+    "cross-fetch": "^3.0.6",
     "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
     "graphql": "^15.3.0",
