--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
+    "react-burger-menu": "^3.0.2",
     "react-codemirror2": "^7.2.1",
     "react-dom": "16.13.1",
+    "react-media": "^2.0.0-rc.1",
     "react-spring": "^8.0.27",
     "react-toastify": "^6.1.0",
     "react-toolkit": "^2.0.0-alpha.3",
