--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-burger-menu": "^3.0.2",
     "react-codemirror2": "^7.2.1",
     "react-dom": "16.13.1",
+    "react-ios-switch": "^0.1.19",
     "react-media": "^2.0.0-rc.1",
     "react-spring": "^8.0.27",
     "react-toastify": "^6.1.0",
