--- a/.github/workflows/cypress-ci.yml
+++ b/.github/workflows/cypress-ci.yml
@@ -37,7 +37,16 @@ jobs:
         env:
           MONGODB_HOST: mongodb
           MONGODB_PORT: ${{ job.services.mongodb.ports[27017] }}
+          LDAP_ENABLED: true
           LDAP_HOST: ldap
+          LDAP_PORT: 389
+          LDAP_PROTOCOL: ldap
+          LDAP_BIND_DN: "cn=admin,dc=planetexpress,dc=com"
+          LDAP_BIND_SECRET: "GoodNewsEveryone"
+          LDAP_SEARCH_BASE: "ou=people,dc=planetexpress,dc=com"
+          LDAP_SEARCH_FILTER: "(mail={{username}})"
+          LDAP_SEARCH_ATTRIBUTES: "mail, uid"
+          LDAP_EMAIL_FIELDNAME: mail
       - name: 'Upload Artifact'
         if: failure()
         uses: actions/upload-artifact@v2
