--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "update": "nx migrate latest",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "reactide-server": "webpack-dev-server --config reactide.config.js --mode development --hot"
   },
   "private": true,
   "dependencies": {
@@ -65,15 +66,19 @@
     "react-toastify": "^6.1.0",
     "react-toolkit": "^2.0.0-alpha.3",
     "react-tooltip": "^4.2.11",
+    "reactide-config": "^1.0.2",
     "subscriptions-transport-ws": "^0.9.18",
     "swr": "^0.1.16",
-    "tslib": "^2.0.3",
+    "tslib": "^2.1.0",
     "validator": "^13.1.17"
   },
   "devDependencies": {
-    "@babel/core": "7.9.6",
-    "@babel/preset-env": "7.9.6",
-    "@babel/preset-react": "7.9.4",
+    "@babel/cli": "^7.0.0-beta.40",
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0-beta.0",
     "@babel/preset-typescript": "7.9.0",
     "@nrwl/cypress": "10.2.0",
     "@nrwl/eslint-plugin-nx": "10.2.0",
@@ -91,6 +96,8 @@
     "@typescript-eslint/eslint-plugin": "2.19.2",
     "@typescript-eslint/parser": "2.19.2",
     "babel-jest": "26.2.2",
+    "babel-loader": "^8.0.0-beta.0",
+    "css-loader": "^2.1.1",
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "enzyme": "^3.11.0",
@@ -102,14 +109,23 @@
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4.0.4",
+    "file-loader": "^4.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^4.3.0",
     "jest": "26.2.2",
     "jest-fetch-mock": "^3.0.3",
     "msw": "^0.21.3",
+    "node-sass": "^4.12.0",
     "prettier": "2.0.4",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "ts-jest": "26.1.4",
     "ts-node": "~7.0.0",
-    "typescript": "~3.9.3"
+    "typescript": "~3.9.3",
+    "url-loader": "^2.0.0",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.7.0"
   },
   "husky": {
     "hooks": {
