--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@apollo/client": "^3.2.1",
     "@apollo/react-testing": "^4.0.0",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.11.2",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.34",
     "@types/react-bootstrap-table-next": "^4.0.3",
