--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.2.1",
+    "@apollo/client": "^3.3.7",
+    "@apollo/react-components": "^4.0.0",
+    "@apollo/react-hooks": "4.0.0",
     "@apollo/react-testing": "^4.0.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
