--- a/package.json
+++ b/package.json
@@ -30,9 +30,6 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.7",
-    "@apollo/react-components": "^4.0.0",
-    "@apollo/react-hooks": "4.0.0",
-    "@apollo/react-testing": "^4.0.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
     "@types/jsonwebtoken": "^8.5.0",
@@ -40,7 +37,7 @@
     "@types/react-bootstrap-table-next": "^4.0.3",
     "argon2": "^0.27.0",
     "chance": "^1.1.7",
-    "codemirror": "^5.58.3",
+    "codemirror": "^5.59.2",
     "cross-fetch": "^3.0.6",
     "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
@@ -56,6 +53,7 @@
     "passport-local": "^1.0.0",
     "passport-remember-me": "0.0.1",
     "react": "16.13.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
@@ -65,11 +63,11 @@
     "react-dom": "16.13.1",
     "react-ios-switch": "^0.1.19",
     "react-media": "^2.0.0-rc.1",
+    "react-minimal-datetime-range": "^1.6.0",
     "react-spring": "^8.0.27",
     "react-toastify": "^6.1.0",
     "react-toolkit": "^2.0.0-alpha.3",
     "react-tooltip": "^4.2.11",
-    "reactide-config": "^1.0.2",
     "subscriptions-transport-ws": "^0.9.18",
     "swr": "^0.1.16",
     "tslib": "^2.1.0",
