--- a/.env
+++ b/.env
@@ -29,3 +29,8 @@ CONFIG_PORT=3000
 API_HOST=postgrest
 API_PORT=3000
 DATABASE_HOST=database
+
+RABBITMQ_USER=guest
+RABBITMQ_PASS=guest
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
