fix: ldap role mapping + bugfix

--- a/.env
+++ b/.env
@@ -22,6 +22,7 @@ LDAP_SEARCH_BASE="ou=people,dc=planetexpress,dc=com"
 LDAP_SEARCH_FILTER="(mail={{username}})"
 LDAP_SEARCH_ATTRIBUTES="mail, uid"
 LDAP_EMAIL_FIELDNAME=mail
+LDAP_ADMIN_GROUP=admin_staff
 
 # API HOSTS
 CONFIG_HOST=configuration
@@ -34,3 +35,6 @@ RABBITMQ_USER=guest
 RABBITMQ_PASS=guest
 RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
+
+# LDAP USER MAPPING
+LDAP_USER_GROUP=
