--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -29,6 +29,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: .
+          file: ./apps/artemis-web/Dockerfile
           push: true
           tags: inspiregroup/artemis-frontend-web:latest
       -
