--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -30,7 +30,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./apps/artemis-web/Dockerfile
+          file: apps/artemis-web/Dockerfile
           push: true
           tags: inspiregroup/artemis-frontend-web:latest
       -
