--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -18,6 +18,9 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        with:
+          image: tonistiigi/binfmt:latest
+          platforms: all
       -
         name: Login to DockerHub
         uses: docker/login-action@v1
@@ -29,8 +32,9 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ../..
-          file: ../../apps/artemis-web/Dockerfile
+          load: true
+          context: .
+          file: ./apps/artemis-web/Dockerfile
           push: true
           tags: inspiregroup/artemis-frontend-web:latest
       -
