fix: dockerfile path

--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -35,7 +35,7 @@ jobs:
           load: true
           context: .
           file: ./apps/artemis-web/Dockerfile
-          push: true
+          push: false
           tags: inspiregroup/artemis-frontend-web:latest
       -
         name: Image digest
