fix: dockerfile path

--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           load: true
           context: .
-          file: ./apps/artemis-web/Dockerfile
+          file: ./Dockerfile
           push: false
           tags: inspiregroup/artemis-frontend-web:latest
       -
