--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -32,10 +32,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          load: true
-          context: .
-          file: ./Dockerfile
-          push: false
+          pull: true
+          push: true
           tags: inspiregroup/artemis-frontend-web:latest
       -
         name: Image digest
