--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "nanoid": "^3.1.12",
     "next": "^10.0.0",
     "next-connect": "^0.9.0",
+    "next-csrf": "^0.1.1",
     "next-session": "^3.3.2",
     "passport": "^0.4.1",
     "passport-ldapauth": "^3.0.1",
