--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,12 +1,29 @@
 version: '3.5'
 services:
-  artemis-web:
+  nginx:
+    image: nginx:1.17-alpine
+    container_name: nginx
+    restart: always
+    networks:
+        - proxy-net
+    ports:
+        # uncomment both lines for rootless
+        # - "8080:8080"
+        # - "8443:8443"
+        # comment both lines when running rootless
+        - "80:80"
+        - "443:443"
+    volumes:
+        - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+        - ./nginx/certs/:/etc/nginx/certs/
+
+  artemis_web:
     image: artemis-web:latest
     build:
       context: .
       dockerfile: apps/artemis-web/Dockerfile
     restart: always
-    container_name: artemis-web
+    container_name: artemis_web
     networks:
       - proxy-net
     env_file:
