--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -1,14 +1,17 @@
 name: ZAP Baseline Scan
 
 on:
- push:
-   branches:
-     - master
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
  zap_scan:
    runs-on: ubuntu-latest
-   name: Scan the webapplication
+   name: Scan the web application
 
    steps:
      - name: Checkout
