--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "jest": "26.6.3",
     "jest-fetch-mock": "^3.0.3",
     "msw": "^0.26.1",
+    "next-secure-headers": "^2.2.0",
     "node-sass": "^5.0.0",
     "prettier": "2.2.1",
     "sass-loader": "^11.0.1",
