feat: check timestamp every 5 seconds

--- a/.env
+++ b/.env
@@ -42,3 +42,6 @@ LDAP_USER_GROUP=
 CSRF_SECRET="P*3NGEEaJV3yUGDJA9428EQRg!ad"
 NEXT_PUBLIC_SYSTEM_VERSION=latest
 TESTING=false
+
+# session timeout in seconds
+NEXT_PUBLIC_SESSION_TIMEOUT=1800
