fix: inactivity timeout

--- a/.env
+++ b/.env
@@ -44,4 +44,5 @@ NEXT_PUBLIC_SYSTEM_VERSION=latest
 TESTING=false
 
 # session timeout in seconds
-NEXT_PUBLIC_SESSION_TIMEOUT=1800
+SESSION_TIMEOUT=1800
+NEXT_PUBLIC_INACTIVITY_TIMEOUT=900
