--- a/.env
+++ b/.env
@@ -42,3 +42,7 @@ LDAP_USER_GROUP=
 CSRF_SECRET="P*3NGEEaJV3yUGDJA9428EQRg!ad"
 NEXT_PUBLIC_SYSTEM_VERSION=latest
 TESTING=false
+
+# session timeout in seconds
+SESSION_TIMEOUT=1800
+NEXT_PUBLIC_INACTIVITY_TIMEOUT=900
