first draft of ldap fixes, tests pending

--- a/.env
+++ b/.env
@@ -20,9 +20,12 @@ LDAP_BIND_DN="cn=admin,dc=planetexpress,dc=com"
 LDAP_BIND_SECRET="GoodNewsEveryone"
 LDAP_SEARCH_BASE="ou=people,dc=planetexpress,dc=com"
 LDAP_SEARCH_FILTER="(mail={{username}})"
-LDAP_SEARCH_ATTRIBUTES="mail, uid"
+LDAP_SEARCH_ATTRIBUTES="mail,uid"
+LDAP_GROUP_SEARCH_BASE="ou=groups,dc=planetexpress,dc=com"
+LDAP_GROUP_SEARCH_FILTER="(member={{dn}})"
+LDAP_GROUP_SEARCH_ATTRIBUTES="mail,uid"
 LDAP_EMAIL_FIELDNAME=mail
-LDAP_ADMIN_GROUP=admin_staff
+LDAP_ADMIN_GROUP="admin_staff"
 
 # API HOSTS
 CONFIG_HOST=configuration
@@ -35,9 +38,6 @@ RABBITMQ_USER=guest
 RABBITMQ_PASS=guest
 RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
-
-# LDAP USER MAPPING
-LDAP_USER_GROUP=
 
 CSRF_SECRET="P*3NGEEaJV3yUGDJA9428EQRg!ad"
 NEXT_PUBLIC_SYSTEM_VERSION=latest
