--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,7 +11,8 @@ tasks:
       MONGODB_HOST=localhost ./apps/artemis-web/scripts/wait-for -h localhost -p ${MONGODB_PORT} -t 0
       yarn build --prod
       MONGODB_HOST=localhost node apps/artemis-web/scripts/query.js
-      MONGODB_HOST=localhost LDAP_HOST=localhost yarn run start --prod
+      npx cypress install
+      MONGODB_HOST=localhost LDAP_HOST=localhost yarn start --prod
 ports:
   - port: 4200
     onOpen: open-browser
