fix: upgrade packages

--- a/apps/artemis-web/babel-jest.config.json
+++ b/apps/artemis-web/babel-jest.config.json
@@ -1,15 +1,15 @@
 {
   "presets": [
     [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "node": "current"
+      [
+        "@babel/preset-env",
+        {
+          "modules": false
         }
-      }
-    ],
-    "@babel/preset-typescript",
-    "@babel/preset-react"
+      ],
+      "@babel/preset-react",
+      "@babel/preset-typescript"
+    ]
   ],
   "plugins": [
     "@babel/proposal-class-properties",
