--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ LDAP_GROUP_SEARCH_BASE=ou=people,dc=planetexpress,dc=com
 LDAP_GROUP_SEARCH_FILTER=(member={{dn}})
 LDAP_GROUP_SEARCH_ATTRIBUTES=mail,uid
 LDAP_EMAIL_FIELDNAME=mail
-LDAP_ADMIN_GROUP="admin_staff"
+LDAP_ADMIN_GROUP=admin_staff
 
 # API HOSTS
 CONFIG_HOST=configuration
