--- a/apps/artemis-web/Dockerfile
+++ b/apps/artemis-web/Dockerfile
@@ -10,6 +10,8 @@ COPY . .
 
 RUN apk add --no-cache bash
 
+RUN apk install libc6-compat
+
 COPY ./apps/artemis-web/scripts/* ./
 
 RUN yarn run nx build artemis-web --prod
