--- a/apps/artemis-web/Dockerfile
+++ b/apps/artemis-web/Dockerfile
@@ -8,7 +8,7 @@ RUN yarn install --frozen-lockfile && yarn cache clean
 
 COPY . .
 
-RUN apk add --no-cache bash \
+RUN apk update && apk add --no-cache bash \
  && apk add libc6-compat
 
 COPY ./apps/artemis-web/scripts/* ./
