--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@material-ui/icons": "^4.11.2",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/react-bootstrap-table-next": "^4.0.16",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "amqp-ts": "^1.8.0",
     "argon2": "^0.28.2",
     "chance": "^1.1.8",
@@ -44,17 +44,17 @@
     "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
     "express-rate-limit": "^5.5.0",
-    "graphql": "^15.6.1",
+    "graphql": "^16.0.1",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lambda-captcha": "^2.1.2",
     "mongodb": "^4.1.3",
     "nanoid": "^3.1.30",
     "next": "^12.0.2",
-    "next-connect": "^0.10.2",
+    "next-connect": "^0.11.0",
     "next-csrf": "^0.1.1",
     "next-session": "^4.0.2",
-    "nx": "^12.10.0",
+    "nx": "^13.1.2",
     "passport": "^0.5.0",
     "passport-ldapauth": "^3.0.1",
     "passport-local": "^1.0.0",
@@ -70,53 +70,52 @@
     "react-dom": "^17.0.2",
     "react-ios-switch": "^0.1.19",
     "react-media": "^1.10.0",
-    "react-minimal-datetime-range": "^1.6.0",
+    "react-minimal-datetime-range": "^1.7.0",
     "react-spring": "^9.3.0",
     "react-toastify": "^8.0.3",
     "react-toolkit": "^2.0.0-alpha.6",
     "react-tooltip": "^4.2.21",
-    "sharp": "^0.29.1",
+    "sharp": "^0.29.2",
     "subscriptions-transport-ws": "^0.9.18",
     "swr": "^1.0.1",
     "tslib": "^2.1.0",
     "typescript-rabbitmq": "^0.0.8",
-    "validator": "^13.1.17"
+    "validator": "^13.7.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.8",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
-    "@babel/plugin-transform-runtime": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.0.0-beta.0",
-    "@babel/preset-typescript": "^7.15.0",
-    "@next/eslint-plugin-next": "^11.1.2",
-    "@nrwl/cypress": "12.10.0",
-    "@nrwl/eslint-plugin-nx": "12.10.0",
-    "@nrwl/jest": "12.10.0",
-    "@nrwl/next": "12.10.0",
-    "@nrwl/react": "12.10.0",
-    "@nrwl/web": "12.10.0",
-    "@nrwl/workspace": "12.10.0",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@next/eslint-plugin-next": "^12.0.2",
+    "@nrwl/cypress": "13.1.2",
+    "@nrwl/eslint-plugin-nx": "13.1.2",
+    "@nrwl/jest": "13.1.2",
+    "@nrwl/next": "13.1.2",
+    "@nrwl/react": "13.1.2",
+    "@nrwl/web": "13.1.2",
+    "@nrwl/workspace": "13.1.2",
     "@testing-library/react": "12.1.2",
     "@types/jest": "^27.0.2",
-    "@types/node": "~16.11.0",
+    "@types/node": "~16.11.6",
     "@types/passport": "^1.0.4",
-    "@types/react": "17.0.30",
-    "@types/react-dom": "17.0.9",
-    "@typescript-eslint/eslint-plugin": "5.0.0",
-    "@typescript-eslint/parser": "5.0.0",
-    "@webpack-cli/generators": "^2.4.0",
-    "babel-jest": "^27.2.5",
-    "babel-loader": "^8.0.0-beta.0",
+    "@types/react": "17.0.33",
+    "@types/react-dom": "17.0.10",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
+    "@webpack-cli/generators": "^2.4.1",
+    "babel-jest": "^27.3.1",
+    "babel-loader": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "css-loader": "^6.4.0",
-    "cypress": "^8.6.0",
+    "css-loader": "^6.5.0",
+    "cypress": "^8.7.0",
     "dotenv": "10.0.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "eslint": "^7.32.0",
+    "eslint": "<8.0.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.25.2",
@@ -124,23 +123,23 @@
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.0.0",
-    "husky": "^7.0.2",
-    "jest": "^27.2.5",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
+    "jest": "^27.3.1",
     "jest-fetch-mock": "^3.0.3",
     "msw": "^0.35.0",
     "next-secure-headers": "^2.2.0",
     "node-sass": "^6.0.1",
     "prettier": "2.4.1",
-    "sass-loader": "^12.2.0",
-    "style-loader": "^3.3.0",
-    "ts-jest": "^27.0.6",
-    "ts-node": "~10.3.0",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
+    "ts-jest": "^27.0.7",
+    "ts-node": "~10.4.0",
     "typescript": "^4.4.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.58.2",
-    "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack": "^5.61.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
   },
   "husky": {
     "hooks": {
